--- a/labs/1.01-python-ladder-challenge/nguyen_vivian_part-3-python-ladder.ipynb
+++ b/labs/1.01-python-ladder-challenge/nguyen_vivian_part-3-python-ladder.ipynb
@@ -38,10 +38,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def area_triangle(base, height):\n",
+    "    return (0.5) * base * height\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "area_triangle(5, 4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -54,10 +77,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from math import pi\n",
+    "\n",
+    "def area_circle(radius):\n",
+    "    return pi * radius ** 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "314.1592653589793"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "area_circle(10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -69,10 +117,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def sum_n(number):\n",
+    "    return sum((i for i in range(number+1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum_n(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -84,10 +155,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from math import sqrt\n",
+    "\n",
+    "def sum_squares(number):\n",
+    "    return sum([i ** 2 for i in [i for i in range(number+1)]])\n",
+    "\n",
+    "sum_squares(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,10 +188,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'$11'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def to_dollar(euro):\n",
+    "    return f'${round((euro * 1.1))}'\n",
+    "\n",
+    "to_dollar(10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,10 +220,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1.1, 11.0, 110.0]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def to_dollar_list(euro_list):\n",
+    "    return [round((i * 1.1), 2) for i in euro_list]\n",
+    "\n",
+    "to_dollar_list([1, 10, 100])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -131,10 +252,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def is_tall(height):\n",
+    "    return 'Tall enough' if height > 60 else 'Too short'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Tall enough', 'Too short')"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_tall(72), is_tall(52)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -146,10 +290,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Too short', 'Tall enough', 'Too short']"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def is_tall_list(height_list):\n",
+    "    return [is_tall(height_list[i]) for i in range(len(height_list))]\n",
+    "\n",
+    "is_tall_list([58, 70, 60])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -169,10 +329,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def letter_grade(grade):\n",
+    "    if grade >= 90:\n",
+    "        return 'A'\n",
+    "    elif grade >= 80:\n",
+    "        return 'B'\n",
+    "    elif grade >= 70:\n",
+    "        return 'C'\n",
+    "    elif grade >= 60:\n",
+    "        return 'D'\n",
+    "    else:\n",
+    "        return 'F'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'B'"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "letter_grade(85)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -185,10 +377,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def letter_grades(_list):\n",
+    "    return [letter_grade(i) for i in _list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['B', 'D', 'A']"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "letter_grades([85, 62, 90])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -200,10 +415,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def vowel_count(string):\n",
+    "    return sum(string.lower().count(i) for i in 'aeiou')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vowel_count(\"General Assembly\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -216,10 +454,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def toggle_case(string):\n",
+    "    for i in string:\n",
+    "        string.lower()\n",
+    "        if i in 'aeiou':\n",
+    "            i.lower()\n",
+    "            print(i)\n",
+    "        else:\n",
+    "            i.upper()\n",
+    "            print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "G\n",
+      "e\n",
+      "n\n",
+      "e\n",
+      "r\n",
+      "a\n",
+      "l\n",
+      " \n",
+      "A\n",
+      "s\n",
+      "s\n",
+      "e\n",
+      "m\n",
+      "b\n",
+      "l\n",
+      "y\n"
+     ]
+    }
+   ],
+   "source": [
+    "toggle_case(\"General Assembly\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -454,9 +734,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
