finish ladder part 3

--- a/labs/1.01-python-ladder-challenge/nguyen_vivian_part-3-python-ladder.ipynb
+++ b/labs/1.01-python-ladder-challenge/nguyen_vivian_part-3-python-ladder.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,20 +48,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10.0"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "area_triangle(5, 4)"
    ]
@@ -77,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,20 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "314.1592653589793"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "area_circle(10)"
    ]
@@ -117,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,20 +105,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sum_n(5)"
    ]
@@ -155,20 +122,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "55"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from math import sqrt\n",
     "\n",
@@ -188,20 +144,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'$11'"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def to_dollar(euro):\n",
     "    return f'${round((euro * 1.1))}'\n",
@@ -220,20 +165,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1.1, 11.0, 110.0]"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def to_dollar_list(euro_list):\n",
     "    return [round((i * 1.1), 2) for i in euro_list]\n",
@@ -252,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,20 +196,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('Tall enough', 'Too short')"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "is_tall(72), is_tall(52)"
    ]
@@ -290,20 +213,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Too short', 'Tall enough', 'Too short']"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def is_tall_list(height_list):\n",
     "    return [is_tall(height_list[i]) for i in range(len(height_list))]\n",
@@ -329,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,20 +260,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'B'"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "letter_grade(85)"
    ]
@@ -377,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,20 +288,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['B', 'D', 'A']"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "letter_grades([85, 62, 90])"
    ]
@@ -415,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,20 +315,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "vowel_count(\"General Assembly\")"
    ]
@@ -454,49 +333,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def toggle_case(string):\n",
+    "    return_string = []\n",
     "    for i in string:\n",
     "        string.lower()\n",
     "        if i in 'aeiou':\n",
-    "            i.lower()\n",
-    "            print(i)\n",
+    "            return_string.append(i.lower())\n",
     "        else:\n",
-    "            i.upper()\n",
-    "            print(i)"
+    "            return_string.append(i.upper())\n",
+    "    return ''.join(return_string)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "G\n",
-      "e\n",
-      "n\n",
-      "e\n",
-      "r\n",
-      "a\n",
-      "l\n",
-      " \n",
-      "A\n",
-      "s\n",
-      "s\n",
-      "e\n",
-      "m\n",
-      "b\n",
-      "l\n",
-      "y\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "toggle_case(\"General Assembly\")"
    ]
@@ -514,7 +370,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def disemvowel(string):\n",
+    "    return ''.join([i for i in string if i not in 'aeiouAEIOU'])\n",
+    "\n",
+    "disemvowel(\"Python is my favorite language\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -529,7 +390,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def smart_disemvowel(string):\n",
+    "    #return string.split()\n",
+    "    #return [disemvowel(i) for i in string.split()]\n",
+    "    return [disemvowel(i) if len(i) > 2 else i for i in string.split()]\n",
+    "\n",
+    "smart_disemvowel(\"I love Python programming\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -544,7 +412,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def word_reverser(string):\n",
+    "    return ' '.join(string.split()[::-1])\n",
+    "\n",
+    "word_reverser(\"Data science is cool\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -559,7 +432,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def letter_reverser(string):\n",
+    "    return ' '.join([i[::-1] for i in string.split()])\n",
+    "\n",
+    "letter_reverser(\"Data science is cool\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -594,7 +472,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def to_leet_speak(string):\n",
+    "    return ''.join([leet_dict.get(i) if i not in ' ' else i for i in string.upper()])\n",
+    "\n",
+    "to_leet_speak(\"i am elite\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -611,7 +494,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def is_prime(number):\n",
+    "    return any([False if i != 0 else True for i in [i for i in [number % i for i in range(2, number)]]]) == False\n",
+    "    \n",
+    "\n",
+    "(is_prime(5), is_prime(6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test(number):\n",
+    "    return any([False if i != 0 else True for i in [i for i in [number % i for i in range(2, number)]]])\n",
+    "\n",
+    "test(5), test(6)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -627,7 +528,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def sum_primes(number):\n",
+    "    return sum([i for i in range(number+1) if [is_prime(i) for i in range(number+1)][i] == True][2:])\n",
+    "sum_primes(11)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -691,7 +596,12 @@
    "outputs": [],
    "source": [
     "def permissions_to_octal(permissions):\n",
-    "    pass"
+    "    translater = dict(r = 4, w = 2, x = 1)\n",
+    "    #return [translater[i] for i in permissions if i != '-']\n",
+    "    t = [' ' if i == '-' else translater[i] for i in permissions]\n",
+    "    return ''.join([str(i) for i in [sum(t[:3]), t[3]+ t[5], t[6] + t[8]]])\n",
+    "\n",
+    "permissions_to_octal(\"rwxr-xr-x\")"
    ]
   },
   {
@@ -709,12 +619,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8, -1)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def min_bags(items, avail_large, avail_small):\n",
-    "    pass"
+    "    '''\n",
+    "    you have x items\n",
+    "    first you need to fit as many large bags into x as you can\n",
+    "    increment the bag counter each time you can divide\n",
+    "    \n",
+    "    take the remainder of x\n",
+    "    fit as many small bags as possible \n",
+    "    increment the bag counter each time you can\n",
+    "    \n",
+    "    if remainder = 0, return bag counter\n",
+    "    if remainder > 0, return -1 \n",
+    "    '''\n",
+    "    bags = 0\n",
+    "    \n",
+    " \n",
+    "    for i in range(avail_large):\n",
+    "        items = items - 5\n",
+    "        bags += 1\n",
+    "    \n",
+    "    if items > avail_small:\n",
+    "        return -1\n",
+    "    else:\n",
+    "        return bags + items\n",
+    "    \n",
+    "min_bags(16, 2, 10), min_bags(20, 2, 2)"
    ]
   }
  ],
