--- a/labs/1.02-lab-loot-boxes-master/nguyen-vivian-starter-code.ipynb
+++ b/labs/1.02-lab-loot-boxes-master/nguyen-vivian-starter-code.ipynb
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
     "            opened_lootboxes.append(box)\n",
     "            loot_box_session_tracker.append(i)\n",
     "        \n",
-    "    time = np.percentile(loot_box_session_tracker,[5, 25, 50, 75, 95])\n",
+    "    time = np.percentile(opened_lootboxes,[5, 25, 50, 75, 95])\n",
     "    #sum(opened_lootboxes) / n, time\n",
     "    return f'5th Percentage: {time[0]}, 25th Percentage: {time[1]}, 50th percentage: {time[2]}, 75th Percentage: {time[3]}, 95th Percentage {time[4]}'\n",
     "        "
@@ -565,16 +565,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'5th Percentage: 5324.3, 25th Percentage: 25097.5, 50th percentage: 49872.0, 75th Percentage: 74917.5, 95th Percentage 95111.29999999999'"
+       "'5th Percentage: 1.0, 25th Percentage: 1.0, 50th percentage: 1.0, 75th Percentage: 1.0, 95th Percentage 1.0'"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
