--- a/labs/1.02-lab-loot-boxes-master/nguyen-vivian-starter-code.ipynb
+++ b/labs/1.02-lab-loot-boxes-master/nguyen-vivian-starter-code.ipynb
@@ -157,16 +157,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7faf36d94d00>]"
+       "[<matplotlib.lines.Line2D at 0x7f9fdf8e5250>]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -230,9 +230,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -281,16 +279,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7faf36cbca90>]"
+       "[<matplotlib.lines.Line2D at 0x7f9fdf87f2e0>]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -325,37 +323,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('Probability of 20 Elixirs out of 100 Lootboxes: ',\n",
-       " 0.8934557435197008,\n",
-       " 'Probability of 20+ Elixars out of 100 Lootboxes',\n",
-       " 0.1065442564802992)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "('Probability of 20 Elixirs out of 100 Lootboxes: ',[elixar_binom.cdf(i) for i in range(20)][-1],'Probability of 20+ Elixars out of 100 Lootboxes', 1 - [elixar_binom.cdf(i) for i in range(20)][-1])"
+    "#('Probability of 20 Elixirs out of 100 Lootboxes: ',\n",
+    "# [elixar_binom.cdf(i) for i in range(20)][-1],\n",
+    "# 'Probability of 20+ Elixars out of 100 Lootboxes', \n",
+    "# 1 - [elixar_binom.cdf(i) for i in range(20)][-1])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The CDF of our exlixir probabilty distribution shows that the observed value at X will be x, where x is the calculated value from cdf at 20. \n",
+    "~~The CDF of our exlixir probabilty distribution shows that the observed value at X will be x, where x is the calculated value from cdf at 20.~~\n",
     "\n",
-    "The customer has at most an 89 % chance of obtaining 20 exlixirs out of 100 lootboxes. \n",
+    "~~The customer has at most an 89 % chance of obtaining 20 exlixirs out of 100 lootboxes. ~~\n",
     "\n",
-    "To find out what the probability of the customer obtaining 20 or more exlixirs, we can look at the CDF probability from (20 to 100), which is the probability of obtaining 20 to 100 exlixirs. "
+    "~~To find out what the probability of the customer obtaining 20 or more exlixirs, we can look at the CDF probability from (20 to 100), which is the probability of obtaining 20 to 100 exlixirs.~~"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Looking at the solution code\n",
+    "# I am off by a single number, and I have calculated to the left side. I need the right side\n",
+    "[elixar_binom.cdf(i) for i in range(21)][-1]\n",
+    "# In this case, if I actually use the range from 1 to less than 21, \n",
+    "#then I actually count all 20 terms\n",
+    "\n",
+    "# Then I can consider\n",
+    "# Let's round that off so it isn't too much\n",
+    "prob = 1 - [elixar_binom.cdf(i) for i in range(21)][-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The Probability of getting more than 20 lootboxes out of 100 is 6.63198%'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'The Probability of getting more than 20 lootboxes out of 100 is {round(prob*100, 5)}%'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
