--- a/labs/4.01-lab-classification-model-comparison-master/starter-code.ipynb
+++ b/labs/4.01-lab-classification-model-comparison-master/starter-code.ipynb
@@ -50,6 +50,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. As the score of \"Q27: I think a natural disaster would be kind of exciting.\" increases, how does it affect the probability of being left handed?\n",
+    "\n",
+    "# 2. As the score of \"Q44:I decorate my things (e.g. stickers on laptop).\" increases, how does it affect the probability of being left handed?\n",
+    "\n",
+    "# 3. As the score of \"Q30: I think horoscopes are fun.\"increases, how does it affect the probability of being left handed?"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -62,15 +75,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_raw = pd.read_csv('data.csv', delimiter='\\t') #Delineated by tabs not commas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data_raw.copy() # Work with the new copy"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -277,7 +306,12 @@
     "\n",
     "> Create four separate models, one with LASSO and $\\alpha = 1$, one with LASSO and $\\alpha = 10$, one with Ridge and $\\alpha = 1$, and one with Ridge and $\\alpha = 10$. *(Hint: Be careful with how you specify $\\alpha$ in your model!)*\n",
     "\n",
-    "> Instantiate and fit your models using GridSearchCV."
+    "> Instantiate and fit your models using GridSearchCV.\n",
+    "\n",
+    "#14. Let's use logistic regression to predict whether the person is left-handed.\n",
+    "Be sure to use the same train/test split with your data as with your kNN model above!\n",
+    "Search over the following hyperparameters:\n",
+    "- l2 regularization with C = [.001, .01, .1, 1, 10, 100]"
    ]
   },
   {
@@ -460,7 +494,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 25. Select your logistic regression model that utilized LASSO regularization with $\\alpha = 1$. Interpret the coefficient for `Q1`."
+    "### 25. Instantiate, fit, and score a logistic regression model with no regularization. Interpret the coefficient for `Q1`."
    ]
   },
   {
@@ -541,7 +575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
