final 02_feature_engineering

--- a/projects/project-2-master/main/02_Feature_Engineering_KBestFeatures.ipynb
+++ b/projects/project-2-master/main/02_Feature_Engineering_KBestFeatures.ipynb
@@ -104,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set up the aspects of the KBEstFeatures Categeorical Pipeline"
+    "# Set up the aspects of the KBestFeatures Categeorical Pipeline"
    ]
   },
   {
@@ -153,7 +153,12 @@
   {
    "cell_type": "code",
    "execution_count": 359,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -453,7 +458,12 @@
   {
    "cell_type": "code",
    "execution_count": 586,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -577,7 +587,12 @@
   {
    "cell_type": "code",
    "execution_count": 585,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -902,7 +917,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# bhttps://datascience.stackexchange.com/questions/10773/how-does-selectkbest-work\n",
+    "# https://datascience.stackexchange.com/questions/10773/how-does-selectkbest-work\n",
     "# The source to convert p values to score is here\n",
     "scores = -np.log10(kb.pvalues_)"
    ]
@@ -959,7 +974,12 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1030,7 +1050,12 @@
   {
    "cell_type": "code",
    "execution_count": 303,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
